--- a/main.css
+++ b/main.css
@@ -1344,9 +1344,36 @@ nav .nav__btns .btn2:hover {
   transition: 0.6s;
 }
 
+.nav__menu {
+  display: none;
+}
+
 @media screen and (max-width: 1000px) {
   nav .container .nav__wrapper .nav__links {
     display: none;
+  }
+  nav .container .nav__wrapper .nav__menu {
+    display: block;
+  }
+  nav {
+    flex-direction: column;
+    position: relative;
+  }
+  nav .nav__menu {
+    display: block;
+    position: absolute;
+    top: 28px;
+    right: 32px;
+  }
+  nav ul {
+    display: none;
+  }
+  .showmenu {
+    display: block;
+    padding-top: 28px;
+  }
+  nav .container .nav__wrapper .nav__menu {
+    display: block;
   }
   .hero .container .hero__wrapper {
     padding: 50px 0;
@@ -1387,7 +1414,6 @@ nav .nav__btns .btn2:hover {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr);
     grid-column-gap: 16px;
-    grid-row-gap: 16px;
   }
   .comment .container .comment__cards {
     flex-direction: column;
